FIX enabled x axis overflow for mobile view

--- a/bg.css
+++ b/bg.css
@@ -11,6 +11,14 @@ main {
   overflow-x: hidden;
   overflow-y: hidden;
 }
+@media (max-width: 768px) {
+  main {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    overflow-y: visible;
+  }
+}
 
 body {
   margin: 0;
