--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   color: #fff;
   line-height: 1;
   -webkit-font-smoothing: antialiased;
-  overflow: hidden;
+
 }
 .responsive1 {
   width: 42.33%;
